--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 body {
 	width: 100%;
 	margin: 0px;
-	background-image: url('../img/bg1.png');
+	background-image: url('https://storage.frangky.me/img/bg1.png');
 	background-repeat: repeat-y no-repeat;
 	background-size: cover;
 	background-position: center;
