--- a/css/font-awesome.css
+++ b/css/font-awesome.css
@@ -6,8 +6,8 @@
  * -------------------------- */
 @font-face {
   font-family: 'FontAwesome';
-  src: url('../fonts/fontawesome-webfont.eot%3Fv=4.7.0');
-  src: url('../fonts/fontawesome-webfont.eot%3F') format('embedded-opentype'), url('../fonts/fontawesome-webfont.woff2%3Fv=4.7.0') format('woff2'), url('../fonts/fontawesome-webfont.woff%3Fv=4.7.0') format('woff'), url('../fonts/fontawesome-webfont.ttf%3Fv=4.7.0') format('truetype'), url('../fonts/fontawesome-webfont.svg%3Fv=4.7.0') format('svg');
+  src: url('https://storage.frangky.me/fonts/fontawesome-webfont.eot%3Fv=4.7.0');
+  src: url('https://storage.frangky.me/fonts/fontawesome-webfont.eot%3F') format('embedded-opentype'), url('../fonts/fontawesome-webfont.woff2%3Fv=4.7.0') format('woff2'), url('../fonts/fontawesome-webfont.woff%3Fv=4.7.0') format('woff'), url('../fonts/fontawesome-webfont.ttf%3Fv=4.7.0') format('truetype'), url('../fonts/fontawesome-webfont.svg%3Fv=4.7.0') format('svg');
   font-weight: normal;
   font-style: normal;
 }
